# docker-dsl

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  AGENTS.src.md  CHANGELOG.md  CLAUDE.md  README.md  STYLEGUIDE.md  great-docs.yml  pyproject.toml
.claude/: settings.json
.claude/fragments/.github/workflows/docs.yml/: docs-build-preamble.fragment.yml  layout.toml
.claude/fragments/.gitignore/: layout.toml
.claude/fragments/.pre-commit-config.yaml/: layout.toml  python.fragment.yml
.claude/fragments/AGENTS.md/: docker-dsl-development-guide.fragment.md  layout.toml  python-style.fragment.md
.claude/fragments/great-docs.yml/: great-docs-local.fragment.yml  layout.toml
.claude/hooks/: commands.py  docs.py  packs.toml  stewardship.py  style.py  tasks.py  testing.py  toolchain.py
.github/workflows/: ci.yml  docs.yml  guides.yml  release-pypi.yml
.superset/: config.json
docker_dsl/: __init__.py  __main__.py  _completions.sh  apt.py  builder.py  builder.pyi  cli.py  context.py  core.py  instructions.py  mounts.py  naming.py  run.py  stage.py  state.py  stubgen.py
docs/getting-started/: index.qmd  your-first-recipe.qmd
docs/guide/: buildkit-mounts.qmd  index.qmd  multi-stage-builds.qmd  render-from-the-cli.qmd  reusable-helpers.qmd  run-builder.qmd  smart-apt.qmd
docs/scripts/: demo.sh  embed_examples.py  fix_color_swatch.py
examples/: apt_smart.py  demo.py  helpers.py  minimal.py  mounts.py  multi_stage.py  run_builder.py
tests/: conftest.py  test_apt.py  test_context.py  test_examples_snapshot.py  test_instructions.py  test_main.py  test_mounts.py  test_naming.py  test_noop.py  test_render.py  test_run.py  test_stage.py  test_stubgen.py
