[project]
name = "docker-dsl"
version = "0.1.0"
description = "Imperative context-manager DSL for authoring multi-stage Dockerfiles."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Yasyf Mohamedali", email = "yasyfm@gmail.com" }]
keywords = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
]
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.0",
    "executing>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "inline-snapshot>=0.17",
    "ruff>=0.8",
    "ty>=0.0.44",
]

[project.scripts]
docker-dsl = "docker_dsl.cli:main"

[project.urls]
Homepage = "https://github.com/yasyf/docker-dsl"
Documentation = "https://yasyf.github.io/docker-dsl/"
Repository = "https://github.com/yasyf/docker-dsl"
Issues = "https://github.com/yasyf/docker-dsl/issues"
Changelog = "https://github.com/yasyf/docker-dsl/blob/main/CHANGELOG.md"

[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "docker_dsl"
module-root = ""

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers", "--tb=short", "-q"]
markers = [
    "unit: Pure unit tests",
    "integration: Integration tests",
]

# ty (Astral) is the default type checker — run `uv run ty check docker_dsl`.
# It is fast, understands modern syntax, and avoids the strict-pyright false
# positives on pydantic/attrs-style dynamic defaults and PK-type overrides.
[tool.ty.rules]
# Keep cross-checker `# type: ignore` / `# pyright: ignore` comments from tripping ty.
unused-type-ignore-comment = "ignore"

# builder.pyi is generated by stubgen (thousands of single-@overload methods,
# one per shell command) — machine output, not checked.
[tool.ty.src]
exclude = ["docker_dsl/builder.pyi"]

# pyright is kept as a secondary checker (editors / `uvx pyright`). Basic mode plus
# a few disables covers the noise; ty is the gate that runs in CI.
[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "basic"
include = ["docker_dsl"]
venvPath = "."
venv = ".venv"
reportImplicitOverride = "none"
reportIncompatibleVariableOverride = "none"
reportUnknownVariableType = "none"
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"
reportUnknownParameterType = "none"
reportUnknownLambdaType = "none"
reportMissingTypeArgument = "none"
reportPrivateImportUsage = "none"
reportUnusedCallResult = "none"

[tool.ruff]
line-length = 120
target-version = "py313"
src = [".", "tests"]
extend-exclude = ["docker_dsl/builder.pyi"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
# Long lines live inside inline-snapshot literals of rendered Dockerfiles;
# inline-snapshot rewrites them verbatim.
"tests/test_examples_snapshot.py" = ["E501"]

[dependency-groups]
docs = [
    # great-docs imports griffe's 2.x module layout; griffelib is the modern
    # griffe (2.x) distribution, overriding the legacy griffe<2 pin great-docs
    # itself still declares.
    "griffelib>=2.0",
    # Tracking great-docs main until a release newer than 0.13.0: main carries
    # build-time GitHub widget stats (embedded via the CI GITHUB_TOKEN), which
    # drop the navbar widget's client-side API calls — the source of GitHub 403
    # errors on the published site.
    # TODO: revert to a PyPI pin (`great-docs>=0.14`) once released (0.13.0 is current as of 2026-06).
    "great-docs @ git+https://github.com/posit-dev/great-docs@main",
]
